# RasterizationWebGPU

./: .gitignore  Cargo.toml  README.md  bins.txt  graph.py  time.py
resources/scenes/: CesiumMan.json  bunnyscene.glb  bunnyscene.json  bunnyscene_portal.glb  bunnyscene_portal.json  mosh_0511.glb  mosh_7516.glb  mosh_7516.json  mosh_8806.glb  staircase.json  tree.json
resources/shaders/: ambient.wgsl  geometry.wgsl
resources/shaders/basic/: shader.frag  shader.vert
resources/shaders/basic_wgsl/: fragment.wgsl  vertex.wgsl
resources/shaders/glsl/: shader.vert
resources/shaders/wgsl/: ambient.wgsl  geometry.wgsl  light.wgsl  shading.wgsl  shadow.wgsl
results/: Makefile  README.md
src/: animation.rs  blur.rs  camera.rs  context.rs  lib.rs  light.rs  main.rs  material.rs  mesh.rs  scene.rs  sky.rs  texture.rs
src/shaders/: ambient.wgsl  blur.txt  blur.wgsl  forward.wgsl  geometry.wgsl  post.wgsl  shading.wgsl  shadow.wgsl
src_clean/: context.rs  lib.rs  light.rs  main.rs  material.rs  texture.rs
src_clean/shaders/: geometry.wgsl
src_lights/: context.rs  light.rs  main.rs
src_lights/shaders/: blit.wgsl  post.wgsl
src_lights2/: context.rs  light.rs  main.rs  scene.rs
src_lights2/shaders/: shadow.wgsl
src_mesh/: context.rs  main.rs  mesh.rs  scene.rs
src_mesh/shaders/: ambient.wgsl
src_sky/: camera.rs  context.rs  main.rs  sky.rs
