[package]
name = "rasterization"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24.0"
futures = "0.3.13"
anyhow = "1.0.39"
bytemuck = { version = "1.5.1", features = ["derive"] }
tobj = "2.0.4"
glam = { version = "0.13.1", features = ["bytemuck", "serde", "mint"] }
gltf = "0.15.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.naga]
git = "https://github.com/gfx-rs/naga"
tag = "gfx-19"
features = ["wgsl-in"]

[dependencies.wgpu]
git = "https://github.com/gfx-rs/wgpu-rs.git"
