[package]
name = "rasterization"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24.0"
futures = "0.3.13"
anyhow = "1.0.39"
bytemuck = { version = "1.5.1", features = ["derive"] }
glam = { version = "0.13.1", features = ["bytemuck", "serde", "mint"] }
gltf = "0.15.2"
serde = { version = "1.0", features = ["derive"] }
include_wgsl = "1.0"
serde_json = "1.0"
crevice = "0.6.0"
mint = "0.5.6"
ordered-float = "2.1.1"

[dependencies.wgpu]
git = "https://github.com/gfx-rs/wgpu-rs.git"
features = ["trace"]
