[package]
name = "rasterization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25"
futures = "0.3"
anyhow = "1.0"
bytemuck = { version = "1.7", features = ["derive"] }
glam = { version = "0.19", features = ["bytemuck", "serde", "debug-glam-assert"] }
gltf = "0.16"
serde = { version = "1.0", features = ["derive"] }
include_wgsl = "1.1"
serde_json = "1.0"
crevice = { version = "0.8", features = ["glam"] }
ordered-float = "2.8"
env_logger = "0.9"
wgpu = "0.11"

